# FreeDPI-Windows

./: .gitignore  ARCHITECTURE.md  GPT-5.5_Thinking_patch_plan_v6_integrated_gemini.md  IMPLEMENTATION_PLAN.md  OPERA_PROXY_FULL_IMPLEMENTATION_PLAN.md  PROJECT_DIRECTIVES.md  README.md  T59_OPERA_SOCKS5_REAL_PROXY_PLAN.md  T60_MERGED_ADDENDUM.md  WHITELIST_DETECTOR_PLAN(2).md  WHITELIST_DETECTOR_PLAN.md  backlog.md  blocked_domains.txt.example  config.toml.example  installer.nsi
docs/review/: IMPLEMENTATION_PLAN_review.md  deepseekflash_review.md  gemini_review.md  geminiflash_review.md  glm_review.md  kimi_review.md  meta_review.md  mimo_review.md  minimax3_review.md  qwen_review.md  sonnet_review.md
freedpi_windows_testlab_starter_v5_source_grounded_executable/: README.md  SMOKE_RESULTS.json  freedpi_windows_agent_prompt_testlab_v6_blockers_closed.md
freedpi_windows_testlab_starter_v5_source_grounded_executable/contracts/: qa_api.openapi.yaml
freedpi_windows_testlab_starter_v5_source_grounded_executable/patches/: 0001-qa-feature-and-routes.md  0002-core-qa-bindings-and-reset-hooks.md  0003-qa-strategy-inventory-runtime-contract.md  0004-runtime-strategy-snapshot-and-flow-telemetry.md  0005-forced-strategy-and-probe-id-mapping.md  0006-release-guard-and-windows-env.md
freedpi_windows_testlab_starter_v5_source_grounded_executable/scripts/: build_debug.ps1  build_release.ps1  cleanup_driver_service.ps1  env_check.ps1  install_service_test.ps1  run_all_strategies_smoke.ps1  run_autotune_causal.ps1  run_dpi_probe_oracle.ps1  run_flow_telemetry_probe.ps1  run_forced_strategy_smoke.ps1  run_probe_mapping_audit.ps1  run_provider_auto.ps1  run_qa_contract.ps1  run_real_windows_smoke.ps1  run_release_verification.ps1  run_replay_tests.ps1  run_restart_stress.ps1  run_strategy_groups_deep.ps1  run_strategy_inventory.ps1  run_synthetic_dpi_server.ps1  run_trafficgen_client.ps1  run_unit_tests.ps1  run_unsupported_reason_linter.ps1  start_trace.ps1  stop_trace.ps1  uninstall_service_test.ps1
freedpi_windows_testlab_starter_v5_source_grounded_executable/templates/: rust_qa_api_axum_template.rs  rust_qa_decision_log_template.rs  rust_qa_telemetry_template.rs
freedpi_windows_testlab_starter_v5_source_grounded_executable/testlab/domains/: domains.example.json
freedpi_windows_testlab_starter_v5_source_grounded_executable/testlab/fixtures/dns/: README.md
freedpi_windows_testlab_starter_v5_source_grounded_executable/testlab/matrix/: autotune_causal.yaml  dpi_probe.yaml  provider.yaml  real_windows.yaml  smoke.yaml  strategy_all.yaml  strategy_groups.yaml
freedpi_windows_testlab_starter_v5_source_grounded_executable/testlab/server/: README.md
freedpi_windows_testlab_starter_v5_source_grounded_executable/tools/: autotune_causal_observer.py  etw_netsh_trace.py  eventlog_collect.py  flow_telemetry_probe.py  forced_strategy_smoke.py  legacy_combo_runner.py  pairwise_matrix_generator.py  privacy_redact.py  probe_mapping_audit.py  qa_contract_check.py  release_verify.py  report_builder.py  rest_client.py  service_control.py  strategy_inventory.py  strategy_inventory_reconcile.py  synthetic_dpi_server.py  trafficgen_client.py  unsupported_reason_linter.py  win_env_probe.py  windows_testlab_runner.py
review/: IMPLEMENTATION_PLAN2.md
src/: Cargo.toml
src/.cargo/: config.toml
src/api/: Cargo.toml
src/api/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: capture_budget.rs  classifier.rs  config.rs  conntrack.rs  lib.rs  packet_engine.rs  packet_invariants.rs  proxy.rs  split_tunnel.rs  tls_reassembly.rs  windivert_ext.rs
src/core/src/adaptive/: auto_tune.rs  ch_gen.rs  fallback.rs  hop_tab.rs  mod.rs  persist.rs  probe_tune_run.rs  seq_spoof.rs  strategy.rs  strategy_profile.rs  target_escalate.rs
src/core/src/config/: rule_override.rs
src/core/src/desync/: crypto.rs  group.rs  http.rs  ip.rs  mod.rs  obfs.rs  pool.rs  quarantine.rs  quic.rs  rand.rs  redirect_table.rs  segment_plan.rs  tcp.rs  tls.rs
src/core/src/detector/: canary_list.rs  detector.rs  mod.rs  types.rs
src/core/src/dns/: dns_proxy.rs  dns_utils.rs  fakeip.rs  mod.rs  parallel_dial.rs  txid_tracker.rs
src/core/src/engine/: awg_async.rs  delayed_inject.rs  dns_async.rs  flow_affinity.rs  mod.rs
src/core/src/infra/: event_tag.rs  mod.rs  named_pipe.rs  sentinel.rs  windivert_driver.rs
src/core/src/probe/: classifier.rs  config.rs  decision_engine.rs  discriminator.rs  dns_probe.rs  http_probe.rs  ja4_probe.rs  ml_classifier.rs  mod.rs  presets.rs  quic_probe.rs  strategy_map.rs  tcp16_probe.rs  tcp_probe.rs  timing_probe.rs  tls_probe.rs
src/core/src/proxy/: awg_obfuscator.rs  awg_tunnel.rs  http_tunnel.rs  redirector.rs  rewrite.rs  socks5_client.rs  surfeasy.rs  types.rs  zero_config.rs
src/core/src/routing/: adaptive_router.rs  chain.rs  detect.rs  domain_trie.rs  geo.rs  health.rs  mod.rs  opera.rs  tests.rs
src/core/src/socks/: mod.rs  redirector.rs
src/core/src/test_support/: pcap.rs
src/core/tests/: pcap_replay.rs
src/ffi-bridge/: Cargo.toml  build.rs
src/ffi-bridge/src/: lib.rs
src/fuzz/: Cargo.toml
src/fuzz/fuzz_targets/: classifier_invariants.rs
src/service/: Cargo.toml
src/service/src/: main.rs
src/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/ui/src/: App.tsx  index.css
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
src/ui/src-tauri/capabilities/: default.json
src/ui/src-tauri/icons/: icon.icns
src/ui/src-tauri/src/: lib.rs  main.rs  tray.rs
src/ui/src-tauri/src/commands/: mod.rs
src/ui/src/components/: ConntrackPanel.tsx  Dashboard.tsx  GeoPanel.tsx  LanguageSwitcher.tsx  ProbePanel.tsx  SettingsPanel.tsx  SplitTunnelPanel.tsx  StatsGraph.tsx  StatusPanel.tsx  StrategyPanel.tsx
src/ui/src/contexts/: EngineContext.tsx  ThemeContext.tsx
src/ui/src/i18n/: en.json  index.ts  ru.json
src/ui/src/lib/: api.ts
