[package]
name = "byebyedpi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
byebyedpi-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
