[package]
name = "freedpi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freedpi-core = { path = "../core", features = [] }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
qa = ["freedpi-core/qa"]

