[package]
name = "byebyedpi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
rayon.workspace = true
windivert.workspace = true
windows.workspace = true
dashmap.workspace = true
moka.workspace = true
pnet_packet.workspace = true
bytes.workspace = true
tinyvec.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
num_cpus.workspace = true
trust-dns-resolver.workspace = true
reqwest.workspace = true
ipnet.workspace = true
rand = "0.8"
getrandom = "0.2"
crossbeam = "0.8"

[features]
default = []
