[package]
name = "freedpi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
rayon.workspace = true
windivert.workspace = true
windows.workspace = true
dashmap.workspace = true
moka.workspace = true
pnet_packet.workspace = true
bytes.workspace = true
tinyvec.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
num_cpus.workspace = true
trust-dns-resolver.workspace = true
reqwest.workspace = true
ipnet.workspace = true
rand_chacha = "0.3"
rand_core = "0.6"
siphasher = "0.3"
rustc-hash = "2"
rand = "0.8"
smallvec = "1.13"
crossbeam = "0.8"
arc-swap.workspace = true
futures.workspace = true
local-ip-address = "0.6"
native-tls = "0.2"
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
md-5 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
wireguard-sans-io = "1.0.0"

[features]
default = []
qa = []

[dev-dependencies]
tempfile = "3"
