[package]
name = "byebyedpi-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true

# NOTE: cc и bindgen удалены — bye-dpi C код использует Linux-specific API
# (epoll, POSIX sockets) и не компилируется на Windows через MSVC.
# Полная Rust-реализация в core/src/desync/ покрывает 50+ техник.
