[package]
name = "byebyedpi-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
byebyedpi-core = { path = "../core" }
byebyedpi-api = { path = "../api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
num_cpus.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
