[package]
name = "freedpi-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freedpi-core = { path = "../core" }
freedpi-api = { path = "../api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
num_cpus.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
windows.workspace = true
