[package]
name = "freedpi-ui"
version = "1.0.0"
edition = "2021"

[lib]
name = "freedpi_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"
